Fix for the video feed not showing

--- a/WebClient/GameView/GameView.css
+++ b/WebClient/GameView/GameView.css
@@ -4,6 +4,10 @@
     touch-action: none;
 }
 
+html.ar-app, html.ar-app body, html.ar-app .md-content {
+    background-color: transparent !important;
+}
+
 .game-container {
     margin: -16px;
 }
